# odRepoMon

./: .gitignore  LICENSE  PROJECT-PLAN-odRepoMon.md  README.md  example.mirror-config.yaml  mirror-config.yaml  pyproject.toml
.github/workflows/: packaging.yml
scripts/windows/: install-user.cmd  install-user.ps1  launch-agent.cmd  uninstall-user.cmd  uninstall-user.ps1
src/odrepomon/: __main__.py  agent_settings.py  cli.py  config.py  ignore_engine.py  mirror_engine.py  models.py  run_service.py  tray_agent.py
tests/: test_agent_settings.py  test_cli.py  test_config.py  test_mirror_engine.py  test_run_service.py
